# wandering-jet

./: .gitignore  .gitmodules  CMakeLists.txt  bk_transfer_utils.py  clean_uvfits.py  create_artificial.py  fourier.py  generate_maps_mf.py  generate_stack_vlbi_data.py  generate_vlbi_data.py  jet_image.py  plotting.py  vlbi_utils.py
include/: BField.h  Cone.h  Cylinder.h  Geometry.h  Image.h  ImagePlane.h  Intersection.h  Jet.h  MyExceptions.h  NField.h  Observation.h  Parabaloid.h  ParticlesDistribution.h  Pixel.h  Ray.h  System.h  VField.h  linspace.h  logspace.h  utils.h
scripts/: script_clean_rms
src/: BField.cpp  Cone.cpp  Cylinder.cpp  Geometry.cpp  Image.cpp  ImagePlane.cpp  Intersection.cpp  Jet.cpp  NField.cpp  Observation.cpp  Parabaloid.cpp  ParticlesDistribution.cpp  Pixel.cpp  Ray.cpp  System.cpp  VField.cpp  main.cpp  utils.cpp
uvfits/: 1458+718.j.2006_09_06.uvf  1458+718.u.2006_09_06.uvf  1458+718.x.2006_09_06.uvf  1458+718.y.2006_09_06.uvf
